Atualizando Sunshine-Version-2

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MyOpenWeatherMapApiKey="80e24ad05a7d65dfd1949c0c2adf33c5"
